--- a/index.html
+++ b/index.html
@@ -5,6 +5,189 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+
+      <!-- Navigation -->
+
+      <nav class="header_menu">
+        <ul class="header_menu-list">
+          <li class="header_menu-item header_menu-item_active">
+            <a class="header_menu-link">главная</a>
+          </li>
+          <li class="header_menu-item">
+            <a class="header_menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header_menu-item">
+            <a class="header_menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <!-- LOGO -->
+
+      <a class="header_logo">
+        <img 
+          class="header_logo-image"
+          src="./images/logo-black.svg" 
+          alt="Project logo">
+      </a>
+
+      <!-- Address -->
+
+      <section class="contacts">
+        <address class="contacts_address">
+          <a class="contacts_address-phone" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="contacts_address-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </address>
+        <p class="contacts_adress-street">наб. Принсенграхт 263- 265, Амстердам</p>
+      </section>
+    </header>
+
+    <main class="content">
+      <section class="cover"> <!-- image as background add at CSS -->
+        <section class="background">
+        <section class="overlay"></section>
+        </section>
+        <h1 class="cover_title">
+          <span class="accent-span aligned-text">о<span class="cover_title-spacing">но</span></span>
+          <span class="accent-span aligned-text-center">те<span class="cover_title-spacing">бе</span></span>
+          <span class="accent-span aligned-text-right"><span class="cover_title-spacing">н</span>ад<span class="cover_title-no-spacing">о</span></span>
+        </h1>
+        <div class="cover_bottom-block">
+          <p class="cover_text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">
+            Сделать ставку    <!-- or made as a block text with border -->
+          </button>
+        </div>
+      </section>
+
+      <section class="lots">
+        <h2 class="lots_title">Лоты</h2>
+        <ul class="card_list">
+          <li>                                  <!-- Needs OVERLAY! -->
+            <article class="card first_card">  <!--image as a background in CSS -->
+              <section class="overlay"></section>
+              <h3 class="card_title">
+                <a class="card-title_link" href="#0">Фильм режиссёра, который бросил киношколу</a>
+              </h3>
+              <div class="card-text">
+                <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, 
+                  если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card second_card">  <!--image as a background in CSS -->
+              <section class="overlay"></section>
+              <h3 class="card_title">
+                <a class="card-title_link" href="#0">Книга, где описан один скучный день из жизни рекламного агента</a>
+              </h3>
+              <div class="card-text">
+                <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
+                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                  И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card third_card">  <!--image as a background in CSS -->
+              <section class="overlay"></section>
+              <h3 class="card_title">
+                <a class="card-title_link" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+              </h3>
+              <div class="card-text">
+                <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                  Никаких полей, лесов, котиков<span class="card-text-extended">...</span> Сколько бы вы на такое поставили, если бы не знали, что это — 
+                  одна из революционных работ Кандинского?</p>
+              </div>
+            </article>
+          </li>
+        </ul>
+        <a class="lots_link" href="#0">посмотреть больше</a>
+      </section>
+
+      <section class="about">
+        <div class="about_logo">
+          <div class="about_logo-background"></div>
+          <img 
+            class="about_logo-white" 
+            src="./images/logo-white.svg" 
+            alt="Logo">
+        </div>
+        <article class="about_text">
+          <h4 class="about_title">Об аукционе</h4>
+            <p class="about_paragraph first-paragraph">
+              Здесь вы не встретите очередное <span class="text-extended-normal">пафосное собрание невероятно дорогого антиквариата.</span> 
+              <span class="text-extended-normal">Наши</span> лоты вообще не <span class="text-extended-m">должны</span> <span class="text-extended-m">были попасть</span>
+              <span class="text-extended-xs"> ни на один </span>аукцион. <span class="text-extended-xs">Потому что кому нужен </span>
+              <span class="text-extended-xs">дневник </span><span class="text-extended-l">девочки-подростка или картина, которую может нарисовать</span> даже 
+              <span class="text-extended-m">ребёнок? Кому нужны </span>
+              все эти странные вещи, созданные <spann class="text-extended-m">любителями?</spann>
+            </p>
+            <p class="about_paragraph">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
+              Непринятые и непонятые. Когда-то <span class="text-extended-xl">они</span> казались просто 
+              <span class="text-extended-s">неудачными.</span> Но, несмотря на критику, 
+              кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="text-extended-s">представить современную культуру.</span> 
+              Когда в эти вещи не верил никто, продолжали верить <span class="text-extended-s">их создатели.</span> И сейчас эти лоты стали культовыми. 
+            </p>
+      </article>
+      </section>
+    </main>
+
+    <footer class="footer">
+      
+      <section class="footer-contacts">
+        <address class="address contacts_address">
+          <a class="contacts_address-phone" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="contacts_address-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </address>
+        <p class="contacts_adress-street">наб. Принсенграхт 263- 265, Амстердам</p>
+      </section>
+
+      <nav class="footer_menu">
+        <ul class="footer_menu-list">
+          <li class="footer_menu-item footer_menu-item_active">
+            <a class="footer_menu-link">главная</a>
+          </li>
+          <li class="footer_menu-item">
+            <a class="footer_menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer_menu-item">
+            <a class="footer_menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <section class="socials">
+        <a class="socials-link" href="#0">
+          <img 
+            class="socials_icon" 
+            src="./images/yt.svg" 
+            alt="Icon YouTube">
+        </a>
+        <a class="socials-link" href="#0">
+          <img 
+            class="socials_icon" 
+            src="./images/vk.svg" 
+            alt="Icon VK">
+        </a>
+        <a class="socials-link" href="#0">
+          <img 
+            class="socials_icon" 
+            src="./images/pinterest.svg" 
+            alt="Icon Pinterest">
+        </a>
+      </section>
+
+    </footer>
+  </body>
 </html>
