First iteration after first aftertest

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <section class="contacts">
         <address class="contacts_address">
-          <a class="contacts_address-phone" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="contacts_address-phone" href="tel:+99995555555">+9 999 555 5555</a>
           <a class="contacts_address-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         </address>
         <p class="contacts_adress-street">наб. Принсенграхт 263- 265, Амстердам</p>
@@ -130,7 +130,7 @@
               <span class="text-extended-xs"> ни на один </span>аукцион. <span class="text-extended-xs">Потому что кому нужен </span>
               <span class="text-extended-xs">дневник </span><span class="text-extended-l">девочки-подростка или картина, которую может нарисовать</span> даже 
               <span class="text-extended-m">ребёнок? Кому нужны </span>
-              все эти странные вещи, созданные <spann class="text-extended-m">любителями?</spann>
+              все эти странные вещи, созданные <span class="text-extended-m">любителями?</span>
             </p>
             <p class="about_paragraph">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
@@ -147,7 +147,7 @@
       
       <section class="footer-contacts">
         <address class="address contacts_address">
-          <a class="contacts_address-phone" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a class="contacts_address-phone" href="tel:+99995555555">+9 999 555 5555</a>
           <a class="contacts_address-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         </address>
         <p class="contacts_adress-street">наб. Принсенграхт 263- 265, Амстердам</p>
