first iteration after check-list

--- a/index.html
+++ b/index.html
@@ -232,10 +232,16 @@
 
       <section class="socials">
         <a class="socials-link" href="#0">
-          <img class="socials_icon" src="./images/yt.svg" alt="Icon YouTube" />
+          <img 
+            class="socials_icon" 
+            src="./images/yt.svg" 
+            alt="Icon YouTube" />
         </a>
         <a class="socials-link" href="#0">
-          <img class="socials_icon" src="./images/vk.svg" alt="Icon VK" />
+          <img 
+            class="socials_icon" 
+            src="./images/vk.svg" 
+            alt="Icon VK" />
         </a>
         <a class="socials-link" href="#0">
           <img
