--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
       <section class="contacts">
         <address class="contacts_address">
-          <!--changed---->
           <a class="contacts_address-underlined" href="tel:+99995555555"
             >+9 999 555 5555</a
           >
@@ -51,7 +50,6 @@
           >
         </address>
         <p class="contacts_adress-no-underline">
-          <!--changed-->
           наб. Принсенграхт 263- 265, Амстердам
         </p>
       </section>
@@ -61,9 +59,7 @@
       <section class="cover">
         <!-- image as background add at CSS -->
         <div class="background">
-          <!--changed-->
           <div class="overlay"></div>
-          <!--changed-->
         </div>
         <h1 class="cover_title">
           <span class="accent-span aligned-text"
@@ -81,10 +77,7 @@
         </h1>
         <div class="cover_bottom-block">
           <p class="cover_text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button" type="button">
-            <!--changed-->
-            Сделать ставку
-          </button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
 
@@ -92,12 +85,11 @@
         <h2 class="lots_title">Лоты</h2>
         <ul class="card_list">
           <li>
-            <a href="#0">
+            <a class="card_link" href="#0">
+              <!-- changed -->
               <article class="card card_paul-anderson">
-                <!--changed-->
                 <!--image as a background in CSS -->
                 <div class="overlay"></div>
-                <!--changed-->
                 <h3 class="card_title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -112,12 +104,10 @@
             </a>
           </li>
           <li>
-            <a href="#0">
+            <a class="card_link" href="#0">
               <article class="card card_james-joyce">
-                <!--changed-->
                 <!--image as a background in CSS -->
                 <div class="overlay"></div>
-                <!--changed-->
                 <h3 class="card_title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -135,12 +125,10 @@
             </a>
           </li>
           <li>
-            <a href="#0">
+            <a class="card_link" href="#0">
               <article class="card card_vasily-kandinsky">
-                <!--changed-->
                 <!--image as a background in CSS -->
                 <div class="overlay"></div>
-                <!--changed-->
                 <h3 class="card_title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -162,7 +150,6 @@
 
       <section class="about">
         <div class="about_logo">
-          <div class="about_logo-background"></div>
           <img
             class="about_logo-white"
             src="./images/logo-white.svg"
@@ -171,9 +158,7 @@
         </div>
         <article class="about_text">
           <h2 class="about_title">Об аукционе</h2>
-          <!--changed-->
           <p class="about_paragraph paragraph_small-spacing">
-            <!--changed-->
             Здесь вы не встретите очередное
             <span class="text-extended-normal"
               >пафосное собрание невероятно дорогого антиквариата.</span
@@ -212,9 +197,7 @@
 
     <footer class="footer">
       <div class="footer-contacts">
-        <!--changed-->
         <address class="address contacts_address">
-          <!--changed-->
           <a class="contacts_address-underlined" href="tel:+99995555555"
             >+9 999 555 5555</a
           >
@@ -223,7 +206,6 @@
           >
         </address>
         <p class="contacts_adress-no-underline">
-          <!--changed-->
           наб. Принсенграхт 263- 265, Амстердам
         </p>
       </div>
@@ -243,7 +225,6 @@
       </nav>
 
       <div class="socials">
-        <!--changed-->
         <a class="socials-link" href="#0">
           <img class="socials_icon" src="./images/yt.svg" alt="Icon YouTube" />
         </a>
